--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -34,14 +34,17 @@
 
 .inside {
 	width: 250px;
+	height: 250px;
 	float: left;
+	background-size: cover;
+	border: 10px solid white;
+
 }
 
 
 .board {
 	height: 250px;
 	width: 250px;
-	border: 10px solid white;
 }
 
 .homepage {
