--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -94,6 +94,7 @@ App.factory('Picture', ['$resource', function($resource) {
 <body ng-app="drag-and-drop">
   <div ng-controller="oneCtrl">
         <%= current_user %> current user
+        <%= current_user.nickname %> nickname
 
     <!-- this is the button as well as sign in and sign out paths - do not want this in final verison and need to style NEED TO FIX THE FACT THAT BOTH SEARCH BOXS HAVE TO BE FULL IN ORDER TO SUBMIT-->
       <%= form_tag root_path, :method => 'get' do %>  
