--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -53,7 +53,7 @@ App.factory('Picture', ['$resource', function($resource) {
 <body ng-app="drag-and-drop" class ="showpage">
   <div ng-controller="oneCtrl">
   <header class="navbar">  
- 	<ul><%= link_to "Home", :root%></ul> 
+ 	<ul><%= link_to "Home", home_index_path %></ul> 
  	<ul><%= link_to "Instagram", "http://www.instagram.com"%></ul> 
 	<ul><%= link_to "Sign Out", signout_path, id: "signout" %></ul>
   </header>
