--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -97,7 +97,7 @@ App.factory('Picture', ['$resource', function($resource) {
         <%= current_user.nickname %> nickname
 
     <!-- this is the button as well as sign in and sign out paths - do not want this in final verison and need to style NEED TO FIX THE FACT THAT BOTH SEARCH BOXS HAVE TO BE FULL IN ORDER TO SUBMIT-->
-      <%= form_tag root_path, :method => 'get' do %>  
+      <%= form_tag home_index_path, :method => 'get' do %>  
         <% if @user %> 
           <h3 class ="name"><%= link_to @user.name, pictures_path %></h3>
           <!-- like to the show board for specifc user -->
