--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -31,6 +31,7 @@ footer {
 
 header {
 	border-bottom: 5px solid;
+	height: 50px;
 }
 .fi-x {
    font-size: 50px;
@@ -80,14 +81,15 @@ header {
 }
 
 .homepage {
-	background-image: url('plane.png');
+	background-image: url('board.jpg');
 	background-size: cover;
 }
 
 .title {
+	padding-top: 115px;
 	font-family: 'Lobster', cursive;
-	font-size: 100px;
-	text-align: left;
+	font-size: 125px;
+	text-align: center;
 	color: white;
 }
 
@@ -96,9 +98,16 @@ header {
 	text-align: center;
 	font-size: 60px;
 }
-.name {
+
+.pinstagram {
 	float: left;
-	width: 500px;
+	font-family: 'Lobster', cursive;
+	font-size: 50px;
+}
+.name {
+	float: right;
+	margin-right: 10px;
+	// width: 500px;
 }
 .login {
 	float: right;
