--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,6 +15,7 @@
  @import "foundation_and_overrides";
 /* Add imports of custom sass/scss files here */
 
+
 footer {
 	text-align: center;
 	position:absolute;
@@ -103,17 +104,17 @@ header {
 	float: left;
 	font-family: 'Lobster', cursive;
 	font-size: 50px;
+	padding-left: 50px;
 }
 .name {
 	float: right;
 	margin-right: 10px;
 	padding-right: 10px;
 	border-right: 3px solid black;
-	// width: 500px;
 }
 .login {
 	float: right;
-	// width: 300px;
+	padding-right: 50px;
 }
 
 .picture {
@@ -123,7 +124,7 @@ header {
 
 .gram {
 	overflow: scroll;
-	height: 540px;
+	height: 100vh;
 	width: 305px;
 	float: left;
 	display: inline-block;
@@ -150,5 +151,5 @@ footer {
 	width: 300px;
 	z-index: 9999999;
 	opacity: 0.7;
-	border: 5px solid lime;
+	border: 5px solid black;
 }
