--- a/app/assets/stylesheets/foundation.css
+++ b/app/assets/stylesheets/foundation.css
@@ -2641,11 +2641,11 @@ td {
 
 /* Default Link Styles */
 a {
-  color: #008cba;
+  color: black;
   text-decoration: none;
   line-height: inherit; }
   a:hover, a:focus {
-    color: #0078a0; }
+    color: grey !important; }
   a img {
     border: none; }
 
