added short description to read me

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -98,7 +98,7 @@ App.factory('Picture', ['$resource', function($resource) {
         <% if @user %> 
 <header>
       <div class="pinstagram">Pinstagram</div>
-          <%= submit_tag "search", class: "submit" %>
+          <%= submit_tag ".", class: "submit" %>
 
 
         <h3 class ="login">
