--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,6 +15,11 @@
  @import "foundation_and_overrides";
 /* Add imports of custom sass/scss files here */
 
+.submit {
+	height: 0px;
+	width: 0px;
+}
+
 .col4 {
 	color: grey;
 	font-size: 20px;
