--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,8 +16,7 @@
 /* Add imports of custom sass/scss files here */
 
 .submit {
-	height: 0px;
-	width: 0px;
+
 }
 
 .col4 {
@@ -116,10 +115,16 @@ header {
 }
 
 .pinstagram {
-	float: left;
 	font-family: 'Lobster', cursive;
-	font-size: 50px;
-	padding-left: 50px;
+	font-size: 57px;
+	border: none;
+	background: none;
+	position: absolute;
+	margin: 0;
+	padding: 0;
+	padding-left: 40px;
+	margin-top: -11px;
+	z-index: 999999;
 }
 .name {
 	float: right;
