--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,10 @@
 <body class="homepage">
-
-<div class="title">Pinstagram.</div> <br>
-<div class="signin"><%= link_to "Sign In", "/auth/instagram" %></div>
-
-	
+	<div class="title">
+		Pinstagram.
+	</div>
+<br>
+	<div class="signin">
+		<%= link_to "Sign In", "/auth/instagram" %>
+		<%=image_tag "icon.svg", class: "icon"%>
+	</div>
 </body>
